--- a/Introdução ao HTML/Arquivos HTML/Aula-1.css
+++ b/Introdução ao HTML/Arquivos HTML/Aula-1.css
@@ -1,12 +1,27 @@
 body{
     background: #ccc;
+    font-family: Verdana;
+    width: 1000px;
+    margin: auto;
+}
+
+.profile_photo {
+    border: 1px solid #000;
+    border-radius: 50%;
+    width: 100px;
+}
+
+#tittle {
+    font-size: 40px;
+    text-transform: uppercase;
 }
 
 .post {
     background: #fff;
     padding: 10px;
     border: 3px solid #000;
-    margin: 10px;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 #tittle, .subtitle, .post_title {
@@ -15,4 +30,15 @@ body{
 .post_title {
     font-size: 16px;
     font-style: italic;
+}
+
+.post_content {
+    margin: 0;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.post_image {
+    margin-bottom: 15px;
+    width: 100%;
 }
